--- a/transport/.gitignore
+++ b/transport/.gitignore
@@ -35,9 +35,8 @@ LowOrderViscosity.cc
 LowOrderViscosity.h
 NonlinearSolver.cc
 NonlinearSolver.h
-SSPRKTimeIntegrator.cc
-SSPRKTimeIntegrator.h
-TimeIntegrator.h
+OldPostProcessor.cc
+OldPostProcessor.h
 TransportExecutioner.cc
 TransportExecutioner.h
 TransportProblem.cc
