implemented DMP viscosity in conservation_law code

--- a/conservation_law/CMakeLists.txt
+++ b/conservation_law/CMakeLists.txt
@@ -92,8 +92,9 @@ ENABLE_TESTING()
 ADD_SUBDIRECTORY(tests/group_fe_values)
 ADD_SUBDIRECTORY(tests/quadrature)
 ADD_SUBDIRECTORY(tests/transport_galerkin_solution)
-ADD_SUBDIRECTORY(tests/transport_low)
-ADD_SUBDIRECTORY(tests/transport_ev)
+ADD_SUBDIRECTORY(tests/transport_lax)
+ADD_SUBDIRECTORY(tests/transport_dmp)
+ADD_SUBDIRECTORY(tests/transport_ev_lax)
 ADD_SUBDIRECTORY(tests/transport_fct_none)
 ADD_SUBDIRECTORY(tests/transport_fct_full)
 ADD_SUBDIRECTORY(tests/shallowwater_galerkin_solution)
