continuing fct overhaul; explicit transport complete

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -74,6 +74,8 @@ EulerRunParameters.cc
 EulerRunParameters.h
 Exceptions.h
 ExplicitEulerFCT.cc
+ExplicitEulerFCTFilter.cc
+ExplicitEulerFCTFilter.h
 ExplicitEulerFCT.h
 FCT.cc
 FCTFilter.cc
@@ -111,6 +113,8 @@ NoDiffusion.cc
 NoDiffusion.h
 OldFCT.cc
 OldFCT.h
+OnesLimiter.cc
+OnesLimiter.h
 PostProcessor.cc
 PostProcessor.h
 ProblemParameters.cc
@@ -176,3 +180,5 @@ ViscosityMultiplier.cc
 ViscosityMultiplier.h
 ZalesakLimiter.cc
 ZalesakLimiter.h
+ZeroesLimiter.cc
+ZeroesLimiter.h
