--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -57,6 +57,8 @@ DMPExplicitEulerFCTFilter.cc
 DMPExplicitEulerFCTFilter.h
 DMPLowOrderViscosity.cc
 DMPLowOrderViscosity.h
+DMPSteadyStateFCTFilter.cc
+DMPSteadyStateFCTFilter.h
 DoFBounds.cc
 DoFBounds.h
 DomainInvariantDiffusion.cc
@@ -82,6 +84,8 @@ FCT.cc
 FCTFilter.cc
 FCTFilter.h
 FCT.h
+FunctionDoFBounds.cc
+FunctionDoFBounds.h
 GradientMatrix.cc
 GradientMatrix.h
 GraphTheoreticDiffusion.cc
@@ -169,7 +173,15 @@ SSPRKTimeIntegrator.cc
 SSPRKTimeIntegrator.h
 StarState.cc
 StarState.h
+SteadyStateFCT.cc
+SteadyStateFCTFilter.cc
+SteadyStateFCTFilter.h
+SteadyStateFCT.h
+TransportAnalyticSolutionBounds.cc
+TransportAnalyticSolutionBounds.h
 Transport.cc
+TransportDMPAnalyticSSFCTFilter.cc
+TransportDMPAnalyticSSFCTFilter.h
 TransportEntropy.cc
 TransportEntropy.h
 TransportExecutioner.cc
@@ -187,6 +199,8 @@ TransportSSPRKExecutioner.cc
 TransportSSPRKExecutioner.h
 TransportSteadyStateExecutioner.cc
 TransportSteadyStateExecutioner.h
+TransportSteadyStateFCT.cc
+TransportSteadyStateFCT.h
 TransportThetaExecutioner.cc
 TransportTransientExecutioner.cc
 TransportTransientExecutioner.h
