added scripts to run parametric studies and plot results

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -31,6 +31,9 @@ doxygen
 # backup files
 *.bak
 
+# python run files
+*pyc
+
 # additional files added below
 ArtificialDiffusion.cc
 ArtificialDiffusion.h
