started multi-pass limiter

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -119,6 +119,8 @@ LowOrderViscosity.cc
 LowOrderViscosity.h
 MaxWaveSpeed.cc
 MaxWaveSpeed.h
+MultipassLimiter.cc
+MultipassLimiter.h
 MultiRegionExactSolution.cc
 MultiRegionExactSolution.h
 NoDiffusion.cc
