added DMP CFL condition to explicit code and some dissertation work

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -220,6 +220,7 @@ TransportThetaFCT.cc
 TransportThetaFCT.h
 TransportTransientExecutioner.cc
 TransportTransientExecutioner.h
+Utilities.h
 Viscosity.cc
 Viscosity.h
 ViscosityMultiplier.cc
