started implementing analytic bounds for theta and fe in deal

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -190,10 +190,13 @@ ThetaFCT.cc
 ThetaFCTFilter.cc
 ThetaFCTFilter.h
 ThetaFCT.h
+TransportAnalyticFEFCTFilter.h
 TransportAnalyticSolutionBounds.cc
 TransportAnalyticSolutionBounds.h
 TransportAnalyticSSFCTFilter.cc
 TransportAnalyticSSFCTFilter.h
+TransportAnalyticThetaFCTFilter.cc
+TransportAnalyticThetaFCTFilter.h
 Transport.cc
 TransportDMPAnalyticSSFCTFilter.cc
 TransportDMPAnalyticSSFCTFilter.h
