--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -202,6 +202,10 @@ TransportDMPAnalyticSSFCTFilter.cc
 TransportDMPAnalyticSSFCTFilter.h
 TransportEntropy.cc
 TransportEntropy.h
+TransportExactAnalyticSSFCTFilter.cc
+TransportExactAnalyticSSFCTFilter.h
+TransportExactDMPSSFCTFilter.cc
+TransportExactDMPSSFCTFilter.h
 TransportExecutioner.cc
 TransportExecutioner.h
 TransportExplicitEulerFCT.cc
