finished analytic fct filter in deal

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -194,6 +194,7 @@ ThetaFCTFilter.h
 ThetaFCT.h
 TransientMultiRegionExactSolution.cc
 TransientMultiRegionExactSolution.h
+TransportAnalyticFEFCTFilter.cc
 TransportAnalyticFEFCTFilter.h
 TransportAnalyticSolutionBounds.cc
 TransportAnalyticSolutionBounds.h
