added upwind analytic bounds for FE in deal

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -238,6 +238,8 @@ TransportThetaFCT.cc
 TransportThetaFCT.h
 TransportTransientExecutioner.cc
 TransportTransientExecutioner.h
+TransportUpwindAnalyticFEFCTFilter.cc
+TransportUpwindAnalyticFEFCTFilter.h
 TransportUpwindAnalyticSolutionBounds.cc
 TransportUpwindAnalyticSolutionBounds.h
 TransportUpwindAnalyticSSFCTFilter.cc
