Cleaned README and added markdown script and CSS file

--- a/conservation_law/.gitignore
+++ b/conservation_law/.gitignore
@@ -34,222 +34,5 @@ doxygen
 # python run files
 *pyc
 
-# additional files added below
-ArtificialDiffusion.cc
-ArtificialDiffusion.h
-BoundaryConditions.cc
-BoundaryConditions.h
-BoundaryDistance.cc
-BoundaryDistance.h
-Burgers.cc
-Burgers.h
-BurgersMaxWaveSpeed.cc
-BurgersMaxWaveSpeed.h
-BurgersProblemParameters.cc
-BurgersProblemParameters.h
-BurgersRunParameters.cc
-BurgersRunParameters.h
-CharacteristicFCTFilter.cc
-CharacteristicFCTFilter.h
-CMakeVars.h
-CMakeVars.h.h
-ConservationLaw.cc
-ConservationLaw.h
-ConstantMaxWaveSpeed.cc
-ConstantMaxWaveSpeed.h
-ConstantViscosity.cc
-ConstantViscosity.h
-DirichletBoundaryConditions.h
-DMPExplicitEulerFCTFilter.cc
-DMPExplicitEulerFCTFilter.h
-DMPLowOrderViscosity.cc
-DMPLowOrderViscosity.h
-DMPSteadyStateFCTFilter.cc
-DMPSteadyStateFCTFilter.h
-DMPThetaFCTFilter.cc
-DMPThetaFCTFilter.h
-DoFBounds.cc
-DoFBounds.h
-DomainInvariantDiffusion.cc
-DomainInvariantDiffusion.h
-DomainInvariantViscosity.cc
-DomainInvariantViscosity.h
-Entropy.cc
-Entropy.h
-EntropyViscosity.cc
-EntropyViscosity.h
-Euler.cc
-Euler.h
-EulerRiemannSolver.cc
-EulerRiemannSolver.h
-EulerRunParameters.cc
-EulerRunParameters.h
-Exceptions.h
-ExplicitEulerFCT.cc
-ExplicitEulerFCTFilter.cc
-ExplicitEulerFCTFilter.h
-ExplicitEulerFCT.h
-FCT.cc
-FCTFilter.cc
-FCTFilter.h
-FCT.h
-FunctionDoFBounds.cc
-FunctionDoFBounds.h
-GradientMatrix.cc
-GradientMatrix.h
-GraphTheoreticDiffusion.cc
-GraphTheoreticDiffusion.h
-GroupFEValuesBase.cc
-GroupFEValuesBase.h
-GroupFEValuesCell.cc
-GroupFEValuesCell.h
-GroupFEValuesFace.cc
-GroupFEValuesFace.h
-HighOrderViscosity.cc
-HighOrderViscosity.h
-HyperboxBoundaryDistance.cc
-HyperboxBoundaryDistance.h
-InterpolatedFluxEntropy.cc
-InterpolatedFluxEntropy.h
-LaplacianDiffusion.cc
-LaplacianDiffusion.h
-Limiter.cc
-Limiter.h
-LinearSolver.cc
-LinearSolver.h
-LinearTransportFlux.cc
-LinearTransportFlux.h
-LowOrderViscosity.cc
-LowOrderViscosity.h
-MaxWaveSpeed.cc
-MaxWaveSpeed.h
-MultipassLimiter.cc
-MultipassLimiter.h
-MultiRegionExactSolution.cc
-MultiRegionExactSolution.h
-NoDiffusion.cc
-NoDiffusion.h
-NonlinearSolver.cc
-NonlinearSolver.h
-OnesLimiter.cc
-OnesLimiter.h
-PostProcessor.cc
-PostProcessor.h
-ProblemParameters.cc
-ProblemParameters.h
-RefinementHandler.cc
-RefinementHandler.h
-RunParameters.cc
-RunParameters.h
-ScalarConservationLawFlux.h
-ScalarEntropyFluxFEValuesCell.h
-ScalarEntropyFluxFEValuesFace.h
-ShallowWater2DDamBreakBC.cc
-ShallowWater2DDamBreakBC.h
-ShallowWaterBoundaryConditions.cc
-ShallowWaterBoundaryConditions.h
-ShallowWater.cc
-ShallowWaterEntropy.cc
-ShallowWaterEntropyFluxFEValuesCell.h
-ShallowWaterEntropyFluxFEValuesFace.h
-ShallowWaterEntropy.h
-ShallowWaterExplicitEulerFCT.cc
-ShallowWaterExplicitEulerFCT.h
-ShallowWater.h
-ShallowWaterLowOrderViscosity.cc
-ShallowWaterLowOrderViscosity.h
-ShallowWaterMaxWaveSpeed.cc
-ShallowWaterMaxWaveSpeed.h
-ShallowWaterNoBC.cc
-ShallowWaterNoBC.h
-ShallowWaterPostProcessor.cc
-ShallowWaterPostProcessor.h
-ShallowWaterProblemParameters.cc
-ShallowWaterProblemParameters.h
-ShallowWaterRiemannSolver.cc
-ShallowWaterRiemannSolver.h
-ShallowWaterRunParameters.cc
-ShallowWaterRunParameters.h
-ShallowWaterStarState.cc
-ShallowWaterStarState.h
-ShallowWaterSubcriticalOpenBC1D.cc
-ShallowWaterSubcriticalOpenBC1D.h
-ShallowWaterSubcriticalWallBC1D.cc
-ShallowWaterSubcriticalWallBC1D.h
-ShallowWaterViscosityMultiplier.cc
-ShallowWaterViscosityMultiplier.h
-ShallowWaterWallBC.cc
-ShallowWaterWallBC.h
-SSPRKTimeIntegrator.cc
-SSPRKTimeIntegrator.h
-StarState.cc
-StarState.h
-SteadyStateFCT.cc
-SteadyStateFCTFilter.cc
-SteadyStateFCTFilter.h
-SteadyStateFCT.h
-SteadyStateMultiRegionExactSolution.cc
-SteadyStateMultiRegionExactSolution.h
-SWCharacteristicFCTFilter.cc
-SWCharacteristicFCTFilter.h
-ThetaFCT.cc
-ThetaFCTFilter.cc
-ThetaFCTFilter.h
-ThetaFCT.h
-TransientMultiRegionExactSolution.cc
-TransientMultiRegionExactSolution.h
-TransportAnalyticFEFCTFilter.cc
-TransportAnalyticFEFCTFilter.h
-TransportAnalyticSolutionBounds.cc
-TransportAnalyticSolutionBounds.h
-TransportAnalyticSSFCTFilter.cc
-TransportAnalyticSSFCTFilter.h
-TransportAnalyticThetaFCTFilter.cc
-TransportAnalyticThetaFCTFilter.h
-Transport.cc
-TransportDMPAnalyticSSFCTFilter.cc
-TransportDMPAnalyticSSFCTFilter.h
-TransportEntropy.cc
-TransportEntropy.h
-TransportExactAnalyticSSFCTFilter.cc
-TransportExactAnalyticSSFCTFilter.h
-TransportExactDMPSSFCTFilter.cc
-TransportExactDMPSSFCTFilter.h
-TransportExecutioner.cc
-TransportExecutioner.h
-TransportExplicitEulerFCT.cc
-TransportExplicitEulerFCT.h
-Transport.h
-TransportProblem.cc
-TransportProblem.h
-TransportProblemParameters.cc
-TransportProblemParameters.h
-TransportRunParameters.cc
-TransportRunParameters.h
-TransportSSPRKExecutioner.cc
-TransportSSPRKExecutioner.h
-TransportSteadyStateExecutioner.cc
-TransportSteadyStateExecutioner.h
-TransportSteadyStateFCT.cc
-TransportSteadyStateFCT.h
-TransportThetaExecutioner.cc
-TransportThetaExecutioner.h
-TransportThetaFCT.cc
-TransportThetaFCT.h
-TransportTransientExecutioner.cc
-TransportTransientExecutioner.h
-TransportUpwindAnalyticFEFCTFilter.cc
-TransportUpwindAnalyticFEFCTFilter.h
-TransportUpwindAnalyticSolutionBounds.cc
-TransportUpwindAnalyticSolutionBounds.h
-TransportUpwindAnalyticSSFCTFilter.cc
-TransportUpwindAnalyticSSFCTFilter.h
-Utilities.h
-Viscosity.cc
-Viscosity.h
-ViscosityMultiplier.cc
-ViscosityMultiplier.h
-ZalesakLimiter.cc
-ZalesakLimiter.h
-ZeroesLimiter.cc
-ZeroesLimiter.h
+# html output
+output.html
